# flow-matching-molecules

./: .gitignore  data.py  pyproject.toml
dataset/: __init__.py  featurize.py  filtering.py  metrics.py  qm9.py  torch_dataset.py  zinc.py
notebooks/: 01_data_and_roundtrip.ipynb  01_data_exploration.ipynb  02_featurization.ipynb  02_vun_sanity.ipynb  03_stage1_fm.ipynb  03_stage1_fm_old.ipynb
src/: checkpoint.py  evaluate.py  features.py  flow.py  model.py  seeding.py  sizes.py  train.py
src/dataset/: featurize.py  filtering.py  metrics.py  properties.py  qm9.py  torch_dataset.py  zinc.py
src/methods/: __init__.py  defog.py  fm_graph.py
