[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-matching-molecules"
version = "0.0.1"
description = "Flow Matching for Molecular Generation"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "rdkit",
    "torch_molecule",
    "numpy",
    "pandas",
    "matplotlib",
    "tqdm",
    "datasets",
    "huggingface_hub",
    "python-dotenv",
    "fcd_torch",
]

[project.optional-dependencies]

eval = ["pyscf"]
eval-opt = ["pyscf", "geometric"]
eval-psi4 = ["psi4"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["model", "sizes", "train", "evaluate", "checkpoint"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dataset*", "methods*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
